@@ -39,9 +39,11 @@ upstream development version:
     ping checker)
   - Monika refactoring and now in the oar packaging.
   - Added a table schema in the db with the field version, reprensenting the 
-  	version of the db schema.
+    version of the db schema.
   - Added a field DB_PORT in the oar config file. 
   - Bug #5518: add right initialization of the job user name.
+  - Now reservations are scheduled only once (at submission time). So resources
+    for a reservation cannot change in the time.
 
 version 2.2.12:
 ---------------
